# ollama-mcp-client

./: README.md  agent.py  main.py  mcpclient.py  ollama_toolmanager.py  pyproject.toml  requirements.txt  spinner.py
tests/: test_main.py  test_ollama_toolmanager.py
