[project]
name = "ollama-mcp"
version = "0.1.0"
description = "Ollama integration with Model Control Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.5.0",
    "ollama>=0.4.7",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "mcpclient", "ollama_toolmanager"]
